# k3s-fleet

./: README.md
.github/workflows/: device-sim-lint-test.yml
device-sim/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  layout.json  main.py  mqtt_client.py  pyproject.toml
device-sim/src/: config.py  main.py  models.py  mqtt_client.py
device-sim/tests/: conftest.py  test_config.py  test_main.py  test_models.py  test_mqtt_client.py
k8s/mqtt/: mosquitto-config.yaml  mosquitto-deployment.yaml  mosquitto-pvc.yaml  mosquitto-service.yaml
