[project]
name = "device-sim"
version = "0.1.0"
description = "IoT Device Simulator for k3s-fleet"
dependencies = [
    "paho-mqtt==1.6.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
